@@ -14,6 +14,7 @@ XXXX/XX/XX
   - #4536, Fix leak in lwcollection_from_wkb_state (Raúl Marín)
   - #4537, Fix leak in WKT collection parser (Raúl Marín)
   - #4547, Fix AddRasterConstraints handling of empty tables (Sandro Santilli)
+  - #4549, Fix schema qualification of internal types (Raúl Marín)
 
 PostGIS 2.3.10
 2019/08/11
